--- a/index.html
+++ b/index.html
@@ -168,7 +168,6 @@
             width: 120px;
             height: 120px;
             object-fit: contain;
-            clip-path: polygon(30% 0%, 70% 0%, 100% 30%, 100% 70%, 70% 100%, 30% 100%, 0% 70%, 0% 30%);
         }
 
         .hero-right {
@@ -406,7 +405,7 @@
             <header class="logo-section">
                 <div class="hero-left">
                     <div class="logo-container">
-                        <img src="assets/logo.webp" alt="Ludic RPG Logo - Tabletop RPG Designer" class="logo-svg" width="120" height="120">
+                        <img src="assets/logo.png" alt="Ludic RPG Logo - Tabletop RPG Designer" class="logo-svg" width="120" height="120">
                     </div>
                     <div>
                         <h1>Ludic RPG</h1>
