--- a/index.html
+++ b/index.html
@@ -414,6 +414,7 @@
             }
         }
     </style>
+    <script src="https://cdn.usefathom.com/script.js" data-site="PSLRUBJE" defer></script>
 </head>
 <body>
     <div class="container">
@@ -539,6 +540,6 @@
                 </div>
             </section>
         </div>
-    </div>
+    </div>    
 </body>
 </html>
